@@ -1,6 +1,6 @@
 package org.jabref.cli;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import org.jabref.gui.auximport.AuxParserResultViewModel;
 import org.jabref.logic.auxparser.DefaultAuxParser;
@@ -23,7 +23,7 @@ public class AuxCommandLine {
 
         if (!auxFile.isEmpty() && (database != null)) {
             AuxParser auxParser = new DefaultAuxParser(database);
-            AuxParserResult result = auxParser.parse(Paths.get(auxFile));
+            AuxParserResult result = auxParser.parse(Path.of(auxFile));
             subDatabase = result.getGeneratedBibDatabase();
             // print statistics
             System.out.println(new AuxParserResultViewModel(result).getInformation(true));
